--- a/assignment01/Q1.md
+++ b/assignment01/Q1.md
@@ -1,5 +1,7 @@
 Q. 1 Embedded device example
-![GitHub System]
+
+![System.png](https://github.com/girichou/embsys310/blob/main/assignment01/System.png)
+
 HVAC controller plays a crucial role in any modern household. A high-level function of a controller is to merely monitor the set temperature against the room temperature and throttle the HVAC system. But now a days, considering rising fuel cost and inclination towards reducing carbon footprint, consumers and legislator both demands a controller to achieve this goal with compromising the main goal.  Additionally, users now a days want highly interactive graphical interface to match modern architecture. These additional requirements lead to complex controller design over traditional on-off controller. I have listed below some of development challenges faced by modern controller,
 
 Interface
