--- a/assignment01/Q1.md
+++ b/assignment01/Q1.md
@@ -1,45 +1,45 @@
-Q. 1 Embedded device example
+# Q. 1 Embedded device example
 
 ![System.png](https://github.com/girichou/embsys310/blob/main/assignment01/System.png)
 
 HVAC controller plays a crucial role in any modern household. A high-level function of a controller is to merely monitor the set temperature against the room temperature and throttle the HVAC system. But now a days, considering rising fuel cost and inclination towards reducing carbon footprint, consumers and legislator both demands a controller to achieve this goal with compromising the main goal.  Additionally, users now a days want highly interactive graphical interface to match modern architecture. These additional requirements lead to complex controller design over traditional on-off controller. I have listed below some of development challenges faced by modern controller,
 
-Interface
-•	Graphical Interface to display status and configuration menu
+### Interface
+* Gaphical Interface to display status and configuration menu
 
-Response
-•	Very fast user interface response
+### Response
+* Fast user interface response
 
-Troubleshooting
-•	Provide error code for root cause analysis
-•	Increased communication interface to peripheral sensors
+### Troubleshooting
+* Provide error code for root cause analysis
+* Increased communication interface to peripheral sensors
 
-Reliability
-•	Highly reliable
+### Reliability
+* Highly reliable
 
-Connectivity
-•	Support sensor network for more accurate prediction
-•	BLE to connect to smart phone
-•	Wi-Fi interface for remote setting and monitoring
+### Connectivity
+*	Support sensor network for more accurate prediction
+*	BLE to connect to smart phone
+*	Wi-Fi interface for remote setting and monitoring
 
-Memory Space
-•	High memory requirement to store profiles, configuration and graphics
+### Memory Space
+*	High memory requirement to store profiles, configuration and graphics
 
-Power
-•	Low power consumption
-•	Battery operated
+### Power
+*	Low power consumption
+*	Battery operated
 
-Features
-•	OTA feature upgrades
-•	Over the air diagnostics
-•	Artificial intelligence to predict the pattern
-•	Mesh sensor network
-•	Environmental sensor
+### Features
+*	OTA feature upgrades
+*	Over the air diagnostics
+*	Artificial intelligence to predict the pattern
+*	Mesh sensor network
+*	Environmental sensor
 
-Security
-•	Who can configure the controller?
-•	Unauthorized hacking into the system (Bluetooth, Wi-Fi etc.)
+### Security
+*	Who can configure the controller?
+*	Unauthorized hacking into the system (Bluetooth, Wi-Fi etc.)
 
-Cost
-•	Low cost 
-•	Competitive to traditional controller
+### Cost
+*	Low cost 
+* Competitive to traditional controller
