--- a/assignment01/Q2.md
+++ b/assignment01/Q2.md
@@ -1,31 +1,29 @@
-Q. 2 Why use two’s complement to represent negative numbers?
+# Q. 2 Why use two’s complement to represent negative numbers?
 
-computer uses 2's complement to represent neagavtive numbers for following reasons,
+computer uses 2's complement to represent neagavtive numbers as discussed below,
 
-It needs only one logic(or circuit) to either perform addition or subtraction as it does not need special logic to handle subtraction.
+**It needs only one logic(or circuit) to either perform addition or subtraction** as it does not need special logic to handle subtraction.
 
 Let us take an example, we have two numbers 2 and -1 and we need to add these number together,
 
-in case of #1: 2's complement
-
+*in case of #1: 2's complement*
  2 - 1 = b0010 - b1111 = b1 0001  --> b0001 (discarded a carry)
+  Which matches with our expectation.
  
- Which matches with our expectation.
- 
- in case of #2: negative number
- 
-  2 - 1 = b0010 - b1001 = b1011
+*in case of #2: negative number*
+ 2 - 1 = b0010 - b1001 = b1011
    
 Hence simple addition does not work here and need additional logic to handle negative numbers.
 This wil lead to separate logic for addition and subtractin to be carried out separately.
 
-It is easy to change data storage from 4 but to 8 bit very easily.
+*It is easy to change data storage from 4 but to 8 bit very easily.*
 
-e.g. -2 =       b1110 (4 bit)
-     -2 = b1111 1110 (8 bit)
+e.g. 
+-2 =      b1110 (4 bit)
+-2 = b1111 1110 (8 bit)
 	 
-It is just a repition of most significant bit. In case of gegative number representation,
+*It is just a repition of most significant bit. In case of gegative number representation,*
 e.g. -2 =       b1010 (4 bit)
      -2 = b1000 0010 (8 bit)
      
-The above discussion demonstrate how 2's complement is efficient to represent the negative numbers.
+**The above discussion demonstrate how 2's complement is efficient to represent the negative numbers.**
