--- a/assignment01/Q3.md
+++ b/assignment01/Q3.md
@@ -1,4 +1,4 @@
-Q3. IAR installation and “Hello World”
+# Q3. IAR installation and “Hello World”
 
 ![Hello_World.png](https://github.com/girichou/embsys310/blob/main/assignment01/Hello_World.png)
 
