--- a/assignment01/Q1.md
+++ b/assignment01/Q1.md
@@ -2,7 +2,15 @@
 
 ![System.png](https://github.com/girichou/embsys310/blob/main/assignment01/System.png)
 
-HVAC controller plays a crucial role in any modern household. A high-level function of a controller is to merely monitor the set temperature against the room temperature and throttle the HVAC system. But now a days, considering rising fuel cost and inclination towards reducing carbon footprint, consumers and legislator both demands a controller to achieve this goal with compromising the main goal.  Additionally, users now a days want highly interactive graphical interface to match modern architecture. These additional requirements lead to complex controller design over traditional on-off controller. I have listed below some of development challenges faced by modern controller,
+HVAC controller plays a crucial role in any modern household. A high-level function of a controller is to merely monitor the set temperature against the room temperature and throttle the HVAC system. But now a days, considering rising fuel cost and inclination towards reducing carbon footprint, consumers and legislator both demands a controller to achieve this goal with compromising the main goal.  Additionally, users now a days want highly interactive graphical interface to match modern architecture. These additional requirements lead to complex controller design over traditional on-off controller. Some of the complex task this controller has to do are listed below,
+
+* Connec to the Wi-Fi router and support asynchronus configurations and also provide status update at regualr internval. Concurrent request can be made amnd reconfiguation request need to be sorted out.
+* User accessing the GUI would prefer quick responses otherwise delayed resppnse can cause operational chaos.
+* Establish connect to differnt sensors for current state and take necessary action. Commmunication can heepen on differnt buses e.g. analog, SPI, I2C, ADC and 1 Wire. Controller should be able to handle these sensors interfaces.
+* Controller also need to conserve the it's own energy consumption.
+* 
+
+I have listed below some of development challenges faced by modern controller,
 
 ### Interface
 * Gaphical Interface to display status and configuration menu
